fixed the chart on dashboard having a stretched look normal

--- a/dashboard/css/dashboard.css
+++ b/dashboard/css/dashboard.css
@@ -305,6 +305,7 @@
 }
 #myChartt {
     width: 100% !important;
+    height: 19rem !important;
 }
 
 /* Modal container */
